--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,35 @@
 {
     "cSpell.words": [
+        "กรุณาแนบไฟล์",
+        "กับมหาวิทยาลัยแม่โจ้",
+        "ข่าวประชาสัมพันธ์",
+        "คำนำหน้าชื",
+        "แจ้งข้อความเพิ่มเติม",
+        "โดยสามารถใช้ไฟล์",
         "ต่างๆ",
+        "นางสาว",
+        "นามสกุล",
         "ในการสร้างฐานข้อมูลที่สามารถใช้งานได้จริง",
         "บทเรียนนี้มีเนื้อหาเกี่ยวกับการสอนการเริ่มต้นใช้งาน",
+        "เบอร์โทรศัพท์",
         "ปูฟื้นฐานเกี่ยวกับ",
+        "มีลายเซ็นรับรองสำเนาถูกต้อง",
+        "ระดับการศึกษา",
+        "รายชื่อคณะที่เปิดสอน",
+        "รายวิชา",
+        "รายวิชาของคณะ",
         "ลงทะเบียน",
+        "เลือกได้มากกว่า",
+        "เลือกรูปแบบการวัดผล",
         "เลือกเวลาในการลงทะเบียนเพื่อเรียน",
         "และเรียนรู",
-        "เหมาะสำหรับมือใหม่"
+        "เวลา",
+        "สมัครเรียน",
+        "สมัครเรียนแบบบุคคลภายนอก",
+        "สามารถติดต่อได้",
+        "สำเนาบัตรทะเบียนบ้าน",
+        "สำเนาบัตรประชาชน",
+        "เหมาะสำหรับมือใหม่",
+        "อโรงเรียน"
     ]
 }
